k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 8080 # Puerto del servicio
      targetPort: 80 # Puerto de los pods
