k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mariadb
  clusterIP: None
  selector:
    app: mariadb
